@@ -5,6 +5,9 @@ Changes in @NEW@:
       files; there are lists for both binary and text types, and files which are
       added which aren't in either list need to be added with "--text" or
       "--binary"
+  o Bug Fixes:
+    * Conary commands do not perform an unnecessary database checks on the 
+      local system. (CNY-571)
 
 Changes in 1.0.30:
   o System Update Changes:
